# website

./: .gitignore  404.html  CNAME  Gemfile  _config.yml  amtrak.md  changes.md  exposition.md  index.md  math.md  prompt-for-code.md  pyproject.toml  requirements.txt  research.md  robots.txt  teaching.md
.github/workflows/: jekyll.yml
_data/: amtraks.yaml  awards.yaml  cv.yaml  education.yaml  expository-talks.yaml  expository-writing.yaml  links.yaml  navbar.yaml  papers.yaml  research-experience.yaml  research-talks.yaml  service.yaml  teaching.yaml
_includes/: amtrak-conference.html  comma-sep.html  plant.html  toggle.html
_layouts/: base.html
_plugins/: teaching_merge.rb
_sass/: main.scss  plant.scss  toggle.scss
cv/: cv.aux  cv.fdb_latexmk  cv.fls  cv.out  cv.tex
scripts/: build_cv.py
